Ingress/ingressrule.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ab60d59a9372a4503aaba209a81d1b75-2128253581.ap-northeast-2.elb.amazonaws.com
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: frontendsrv
                port:
                  number: 80
         -  path: /student
            pathType: Prefix
            backend:
              service: 
                name: backendsrv
                port:
                  number: 8080
